[gd_scene load_steps=2 format=3 uid="uid://du2xf1dkhxma5"]

[ext_resource type="Script" path="res://Scene/UM/UIScene/LanguageSetting/language_setting.gd" id="1_fosn8"]

[node name="LanguageSetting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fosn8")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="En" type="Button" parent="GridContainer"]
layout_mode = 2
auto_translate = false
text = "English"

[node name="Zh" type="Button" parent="GridContainer"]
layout_mode = 2
auto_translate = false
text = "中文"

[node name="Complete" type="Button" parent="GridContainer"]
layout_mode = 2
text = "完成"

[connection signal="pressed" from="GridContainer/En" to="." method="_on_en_pressed"]
[connection signal="pressed" from="GridContainer/Zh" to="." method="_on_zh_pressed"]
[connection signal="pressed" from="GridContainer/Complete" to="." method="_on_back_pressed"]
